# Homer

./: .flaskenv  .gitignore  Makefile  README.md  config.py  dev.db  garden.py  pyproject.toml  tox.ini  upgrade.sh
homer/: __init__.py  models.py
homer/auth/: __init__.py  forms.py  routes.py
homer/errors/: __init__.py  handlers.py
homer/main/: __init__.py  forms.py  heating.py  pages_menu.py  routes.py
homer/templates/: _macros.html  _todo.html  base.html  health.html  heating.html  heating_edit.html  heating_season.html  heating_season_compare.html  index.html  page.html  page_view.html  todo.html  todo_edit.html  todo_view.html
homer/templates/auth/: login.html
homer/templates/errors/: 404.html  500.html
migrations/: env.py
migrations/versions/: 4842138b56c6_add_heating_table.py  7673ee574a24_new_todo_table.py  9767077fab13_add_page.py  f40db34b1b89_create_user.py
tests/: conftest.py
tests/homer/: test_homer.py
tests/homer/main/: test_heating.py
