[project]
name = "homer"
version = "0.1.0"
description = "Home Flask app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "tox-uv>=1.16.2",
    "tox>=4.23.2",
]
