[project]
name = "homer"
version = "0.1.0"
description = "Home Flask app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.1",
    "flask-migrate>=4.0.7",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "markdown>=3.7",
    "flask-pagedown>=0.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "tox-uv>=1.16.2",
    "tox>=4.23.2",
]
